--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h1 {
   margin: 0;
   padding: 0;
   font-size: 22px;
+  font-weight: 700;
   padding-left: 10%;
   padding-right: 10%;
   margin-bottom: 15px;
